...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/sign_in"
                android:textSize="14sp"
                style="@style/textURL"/>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtRegName"
            style="@style/textInputRegLog"
            android:layout_marginTop="25dp"
            app:errorEnabled="true"
            android:hint="@string/display_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRegName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtRegEmail"
            style="@style/textInputRegLog"
            app:errorEnabled="true"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRegEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtRegPass1"
            style="@style/textInputRegLog"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            android:hint="@string/enter_password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtRegPass2"
            style="@style/textInputRegLog"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            android:hint="@string/confirm_password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/textOnPrimary"
            android:text="@string/register"/>
...
