<resources>
    <string name="app_name">Zenvy</string>

    <string name="action_notification">action_notification</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_is_required">Confirm password is required</string>
    <string name="contacts">Contacts</string>
    <string name="display_name_is_required">Display name is required</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="display_name">Display Name</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>

    <string name="email_is_already_registered">Email is already registered</string>
    <string name="email_invalid">Invalid email</string>
    <string name="email_is_required">Email is required</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="forgot_your_password">"Forgot your password?</string>
    <string name="login">Login</string>
    <string name="login_password_hint">Password</string>
    <string name="looks_quite_here_say_hi_to_someone">Looks quiet here! Say hi to someone!</string>
    <string name="menu">Menu</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="new_message">New Message</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="old_password">Old Password</string>
    <string name="or">or</string>
    <string name="passwords_dont_match">Passwords don’t match</string>
    <string name="password_too_short">Password too short</string>
    <string name="password_is_required">Password is required</string>
    <string name="please_add_your_email"> Please enter your email address. We’ll send you a link to reset your password.</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="search_for_users">Search for users</string>
    <string name="send">Send</string>
    <string name="send_message">Send Message</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="username">Username</string>
    <string name="welcome_onboard">Welcome Onboard!</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="account">Account</string>
    <string name="privacy">Privacy</string>
    <string name="notifications">Notifications</string>
    <string name="voice_call">Voice Call</string>
    <string name="video_call">Video Call</string>
    <string name="send_a_message">Send a message</string>
    <string name="search">Search...</string>
    <string name="searchbar_hint">Search...</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="download">Download</string>
    <string name="close">Close</string>
    <string name="sent_image">Sent image</string>
    <string name="add_new_contact">Add new Contact</string>
    <string name="search_contact">Search Contact</string>
</resources>
